Fix circle being squashed on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -269,6 +269,11 @@ input[type=date]:focus {
     border-bottom: 1px solid #e5e5e5;
 }
 
+.task-label {
+    display: flex;
+    align-items: center;
+}
+
 /* Custom checkbox starts
 Source: https://www.sliderrevolution.com/resources/css-checkbox/ (task description added) */
 .task-label,
@@ -290,6 +295,8 @@ Source: https://www.sliderrevolution.com/resources/css-checkbox/ (task descripti
     position: relative;
     width: 20px;
     height: 20px;
+    /* Add min width to avoid circle being squashed on mobile when task name too long */
+    min-width: 20px;
     border-radius: 50%;
     transform: scale(1);
     vertical-align: middle;
@@ -393,6 +400,7 @@ Source: https://www.sliderrevolution.com/resources/css-checkbox/ (task descripti
     align-items: center;
     gap: 1.25rem;
     font-size: 1rem;
+    margin-left: 1.25rem;
 }
 
 .due-date-container {
